--- a/src/index.css
+++ b/src/index.css
@@ -216,7 +216,7 @@ b{
 }
 .HomeText h1{
   font-weight: 600;
-  font-size: 38px;
+  font-size: 42px;
   letter-spacing: 0.7px;
   padding-top: 10px;
 }
@@ -224,13 +224,13 @@ b{
 .TypeEffect{
   padding: 25px 0px;
   font-weight: 600;
-  font-size: 32px;
+  font-size: 38px;
   letter-spacing: 0.6px;
 }
 
 .illustration{
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
 }
 
 @media(max-width:900px){
@@ -349,6 +349,12 @@ b{
   font-size: 64px;
   border-radius: 5px;
   transition: 0.5s;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.SkillBox div{
+  font-size: 18px;
 }
 .SkillBox:hover{
   transform: scale(1.2);
@@ -421,6 +427,16 @@ b{
   display: block;
   width: 100%;
   margin: 20px 0px;
+  height: 200px;
+  border-radius: 6px;
+  object-fit: cover;
+}
+
+.project-desc{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 14px 0px;
 }
 
 .projectbtn{
@@ -437,6 +453,7 @@ b{
   cursor:pointer;
   text-decoration: none;
   border-style: none;
+  padding: 20px 0px;
 }
 
 
@@ -502,7 +519,8 @@ footer h4{
   display: flex;
   width: 180px;
   font-size: 18px;
-  justify-content: space-evenly;
+  gap: 2rem;
+  margin-top: 1rem;
 }
 
 .footerLinks a{ 
